--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "setup": "npm install && cd app && npm install && cd ..",
     "build": "cd app && npm run build && cd ..",
     "serve": "npm run build && npm run start",
     "start": "node index.js",
