--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "setup": "npm install && cd app && npm install && cd ..",
     "build": "cd app && npm run build && cd ..",
+    "develop": "npm-run-all --parallel start develop-app",
+    "develop-app": "cd app && node build/dev-server.js",
     "serve": "npm run build && npm run start",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +19,8 @@
     "pixi.js": "^5.2.1",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
