--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "DappJump.io",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pixi.js": "^5.2.1",
     "socket.io": "^2.3.0",
