--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "DappJump.io",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pixi.js": "^5.2.1",
