--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "pixi.js": "^5.2.1",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11"
