--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "pixi.js": "^5.2.1",
+    "shelljs": "^0.8.3",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11"
   },
