--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "ora": "^4.0.3",
     "pixi.js": "^5.2.1",
     "shelljs": "^0.8.3",
     "socket.io": "^2.3.0",
