--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-jwt": "^5.3.1",
     "ora": "^4.0.3",
     "pixi.js": "^5.2.1",
+    "rimraf": "^3.0.2",
     "shelljs": "^0.8.3",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11"
