--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.3",
     "socket.io": "^2.3.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "webpack": "^4.42.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
