--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules/
 /app/src
 /app/static
 /app/package.json
+/app/package-lock.json
+/app/.babelrc
+/app/.editorconfig
 .env
 npm-debug.log*
 yarn-debug.log*
