--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "develop": "npm-run-all --parallel start develop-app",
     "serve": "npm run build && npm run start",
+    "postinstall": "",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +27,10 @@
     "shelljs": "^0.8.3",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11",
-    "webpack": "^4.42.0"
+    "webpack": "^4.42.0",
+    "ethereumjs-util": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.11"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
