--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "develop": "npm-run-all --parallel start develop-app",
     "serve": "npm run build && npm run start",
     "postinstall": "",
+    "develop-app": "cd app && npm run dev",
     "start": "node index.js",
     "buildstart": "cd app && npm run build && cd .. && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
