--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ethereumjs-util": "^6.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.11",
     "ora": "^4.0.3",
+    "pixi-filters": "^3.1.1",
     "pixi.js": "^5.2.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.3",
     "socket.io": "^2.3.0",
     "vue": "^2.6.11",
-    "webpack": "^4.42.0",
-    "ethereumjs-util": "^6.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.11"
+    "webpack": "^4.42.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
