--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "develop-app": "cd app && npm run dev",
     "start": "node index.js",
     "buildstart": "cd app && npm run build && cd .. && npm run start",
-    "build": "cd app && npm run build && cd ..",
+    "ship": "cd app && npm run build && cd .. && git add .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
