--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "",
     "develop-app": "cd app && npm run dev",
     "start": "node index.js",
+    "init": "npm install && cd app && npm install && cd ..",
     "buildstart": "cd app && npm run build && cd .. && npm run start",
     "ship": "cd app && npm run build && cd .. && git add .",
     "test": "echo \"Error: no test specified\" && exit 1"
